--- a/styles/components/navbar.css
+++ b/styles/components/navbar.css
@@ -36,6 +36,6 @@
 
 @media (max-width: 48rem) {
     .header {
-        padding: 0.25rem;
+        padding: 1rem;
     }
 }
